[gd_scene load_steps=3 format=3 uid="uid://daihbhw3uo367"]

[ext_resource type="Script" uid="uid://dmuimv0a4y488" path="res://node_2d.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://cpsgbg0l5rrid" path="res://images/flame.png" id="2_0e48y"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wtcfe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, -232)
scale = Vector2(0.163, 0.165)

[node name="plaY" type="Button" parent="."]
offset_left = -328.0
offset_top = -80.0
offset_right = -107.0
offset_bottom = 42.0
scale = Vector2(0.994794, 1)
theme_override_font_sizes/font_size = 71
text = "Learn"

[node name="Surival" type="Button" parent="."]
offset_left = 136.0
offset_top = -80.0
offset_right = 357.0
offset_bottom = 42.0
scale = Vector2(0.994794, 1)
theme_override_font_sizes/font_size = 71
text = "Survival
"

[node name="Leave" type="Button" parent="."]
visible = false
offset_left = 464.0
offset_top = -320.0
offset_right = 573.0
offset_bottom = -272.0
text = "Leave"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="allbuttons" type="Node" parent="."]

[node name="Flag1" type="Button" parent="allbuttons"]
visible = false
offset_left = -456.0
offset_top = 128.0
offset_right = -123.0
offset_bottom = 194.0
text = "Flag1"

[node name="Flag3" type="Button" parent="allbuttons"]
visible = false
offset_left = -456.0
offset_top = 224.0
offset_right = -123.0
offset_bottom = 290.0
text = "Flag3"

[node name="Flag2" type="Button" parent="allbuttons"]
visible = false
offset_left = 120.0
offset_top = 128.0
offset_right = 453.0
offset_bottom = 194.0
text = "Flag2"

[node name="Flag4" type="Button" parent="allbuttons"]
visible = false
offset_left = 120.0
offset_top = 224.0
offset_right = 453.0
offset_bottom = 290.0
text = "Flag4"

[node name="Flame" type="Sprite2D" parent="allbuttons"]
visible = false
position = Vector2(-536, -264)
scale = Vector2(0.109375, 0.109375)
texture = ExtResource("2_0e48y")

[node name="Label" type="Label" parent="allbuttons/Flame"]
offset_left = 219.429
offset_top = -219.429
offset_right = 1438.43
offset_bottom = 211.571
theme_override_font_sizes/font_size = 316
text = "0"

[connection signal="pressed" from="plaY" to="." method="_on_pla_y_pressed"]
[connection signal="pressed" from="Surival" to="." method="_on_surival_pressed"]
[connection signal="pressed" from="Surival" to="." method="_on_pla_y_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_pla_y_pressed"]
[connection signal="pressed" from="allbuttons/Flag1" to="." method="_on_flag_1_pressed"]
[connection signal="pressed" from="allbuttons/Flag3" to="." method="_on_flag_3_pressed"]
[connection signal="pressed" from="allbuttons/Flag2" to="." method="_on_flag_2_pressed"]
